tests/files/lexer_tests/should_fail/113.cmdr
//Should not parse due to unterminated scope
else {echo hi;